--- a/mobile/index.html
+++ b/mobile/index.html
@@ -2,108 +2,103 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>jQTouch &beta;</title>
-        <style type="text/css" media="screen">@import "jqtouch/jqtouch.min.css";</style>
-        <style type="text/css" media="screen">@import "themes/jqt/theme.min.css";</style>
-        <script src="jqtouch/jquery.1.3.2.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="jqtouch/jqtouch.min.js" type="application/x-javascript" charset="utf-8"></script>
+        <title>Blipter</title>
+        <style type="text/css" media="screen">@import "jqtouch/jqtouch.css";</style>
+        <style type="text/css" media="screen">@import "themes/jqt/theme.css";</style>
+        <script src="jqtouch/jquery-1.4.2.min.js" type="text/javascript" charset="utf-8"></script>
+        <script src="jqtouch/jqtouch.js" type="application/x-javascript" charset="utf-8"></script>
         <script type="text/javascript" charset="utf-8">
             var jQT = new $.jQTouch({
-                icon: 'jqtouch.png',
-                addGlossToIcon: false,
-                startupScreen: 'jqt_startup.png',
+                icon: 'blipter.png',
+                icon4: 'blipter4.png',
+                addGlossToIcon: true,
+                startupScreen: 'splash.png',
                 statusBar: 'black',
                 preloadImages: [
+                    'themes/jqt/img/activeButton.png',
                     'themes/jqt/img/back_button.png',
                     'themes/jqt/img/back_button_clicked.png',
+                    'themes/jqt/img/blueButton.png',
+                    'themes/jqt/img/button.png',
                     'themes/jqt/img/button_clicked.png',
                     'themes/jqt/img/grayButton.png',
+                    'themes/jqt/img/greenButton.png',
+                    'themes/jqt/img/redButton.png',
                     'themes/jqt/img/whiteButton.png',
                     'themes/jqt/img/loading.gif'
                     ]
             });
-            // Some sample Javascript functions:
             $(function(){
-                // Show a swipe event on swipe test
-                $('#swipeme').swipe(function(evt, data) {                
-                    $(this).html('You swiped <strong>' + data.direction + '</strong>!');
-                });
-                $('a[target="_blank"]').click(function() {
-                    if (confirm('This link opens in a new window.')) {
-                        return true;
-                    } else {
-                        $(this).removeClass('active');
-                        return false;
-                    }
-                });
-                // Page animation callback events
-                $('#pageevents').
-                    bind('pageAnimationStart', function(e, info){ 
-                        $(this).find('.info').append('Started animating ' + info.direction + '&hellip; ');
-                    }).
-                    bind('pageAnimationEnd', function(e, info){
-                        $(this).find('.info').append(' finished animating ' + info.direction + '.<br /><br />');
-                    });
-                // Page animations end with AJAX callback event, example 1 (load remote HTML only first time)
-                $('#callback').bind('pageAnimationEnd', function(e, info){
-                    if (!$(this).data('loaded')) {                      // Make sure the data hasn't already been loaded (we'll set 'loaded' to true a couple lines further down)
-                        $(this).append($('<div>Loading</div>').         // Append a placeholder in case the remote HTML takes its sweet time making it back
-                            load('ajax.html .info', function() {        // Overwrite the "Loading" placeholder text with the remote HTML
-                                $(this).parent().data('loaded', true);  // Set the 'loaded' var to true so we know not to re-load the HTML next time the #callback div animation ends
-                            }));
-                    }
-                });
-                // Orientation callback event
-                $('body').bind('turn', function(e, data){
+                $('#jqt').bind('turn', function(e, data){
                     $('#orient').html('Orientation: ' + data.orientation);
                 });
+				$('input[name="password"]').focus(function() {
+					if ($(this).val() == 'somepass') {
+						$(this).val('');
+					}
+				});
+				$('input[name="password"]').blur(function() {
+					if ($(this).val().length == 0) {
+						$(this).val('somepass');
+					}
+				});
             });
         </script>
         <style type="text/css" media="screen">
-            body.fullscreen #home .info {
+            #jqt.fullscreen #signup .info {
                 display: none;
             }
-            #about {
-                padding: 100px 10px 40px;
-                text-shadow: rgba(255, 255, 255, 0.3) 0px -1px 0;
-                font-size: 13px;
-                text-align: center;
-                background: #161618;
+            #jqt.fullscreen #signin .info {
+                display: none;
             }
-            #about p {
-                margin-bottom: 8px;
-            }
-            #about a {
-                color: #fff;
-                font-weight: bold;
-                text-decoration: none;
-            }
+			#jqt #signup #small_checkbox {
+				font-size: 15px;
+			}
+			#individual {
+				align: center;
+			}
         </style>
     </head>
     <body>
-        <div id="forms" class="current">
-            <div class="toolbar">
-                <h1>Bliptr</h1>
+        <div id="jqt">
+ 
+           <div id="signup" class="current">
+                <div class="toolbar">
+                    <h1>Blipter</h1>
+                    <a class="button flipright" id="infoButton" href="#signin">Sign in</a>
+                </div>
+            	<form id="create_account" action="lib/create_account.php" method="POST" class="form">
+                    <ul class="edit rounded">
+                        <li><input type="email" name="email" placeholder="Email" id="email" /></li>
+                        <li><input type="password" name="password" value="somepass" id="password" /></li>
+                        <li><input class="small_checkbox" type="checkbox" name="newsletter" value="1" checked="checked" title="Notify me when Blipter launches" /></li>
+                    </ul>
+          			<a style="margin:0 10px;color:rgba(0,0,0,.9)" href="#" class="submit whiteButton">Create my account</a>
+                </form>
+				<br /><br />
+                <div class="info">
+                    <p>Add this page to your home screen for the best experience.</p>
+                </div>
             </div>
-            <form>
-				<h1>Sign up</h1>
-                <ul class="edit rounded">
-                    <li><input type="text" name="username" placeholder="Username" id="username" /></li>
-                    <li><input type="password" name="password" value="" placeholder="password" id="password" /></li>
-                    <li><input type="checkbox" name="newsletter" value="yes" id="newsletter" checked="checked" title="Receive Blitr news" /></li>
-                </ul>
-            </form>
-        </div>
 
-        <form id="ajax_post" action="ajax_post.php" method="POST" class="form">
-            <div class="toolbar">
-                <h1>Post Demo</h1>
-                <a class="back" href="#">Ajax</a>
+            <div id="signin">
+                <div class="toolbar">
+                    <h1>Blipter</h1>
+                    <a class="button flipleft" id="infoButton" href="#signup">Sign up</a>
+                </div>
+            	<form id="login_account" action="lib/login_account.php" method="POST" class="form">
+                    <ul class="edit rounded">
+                        <li><input type="email" name="email" placeholder="Email" id="email" /></li>
+                        <li><input type="password" name="password" value="somepass" id="password" /></li>
+                    </ul>
+          			<a style="margin:0 10px;color:rgba(0,0,0,.9)" href="#" class="submit whiteButton">Sign in</a>
+                </form>
+				<br /><br /><br /><br /><br />
+                <div class="info">
+                    <p>Add this page to your home screen for the best experience.</p>
+                </div>
             </div>
-            <ul class="rounded">
-                <li><input type="text" name="zip" value="" placeholder="Zip Code" /></li>
-            </ul>
-            <a style="margin:0 10px;color:rgba(0,0,0,.9)" href="#" class="submit whiteButton">Submit</a>
-        </form>
+
+        </div>
     </body>
 </html>
